apps/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  annotations:
    tailscale.com/hostname: bazarr
spec:
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - name: http
      port: 6767
      targetPort: http
